--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "TintoImarketClient",
+            "request": "launch",
+            "mainClass": "TintoImarketClient",
+            "projectName": "SC-Projeto-1_16d1bfba"
+        },
+        {
+            "type": "java",
+            "name": "TintoImarketServer",
+            "request": "launch",
+            "mainClass": "TintoImarketServer",
+            "projectName": "SC-Projeto-1_16d1bfba"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}",
